refactor : mapBook에서 String으로 boolean 처리하던 로직 boolean으로 변경